crates/ods-cli/src/snapshots/rich/plan_human_no_color.snap
---
source: crates/ods-cli/src/sample.rs
expression: output
---
Execution plan for jaffle_shop

┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━┳━━━━━━━━━┓
┃ node                         ┃ action ┃ reasons ┃
┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━━━┩
│ model.jaffle_shop.stg_orders │ BUILD  │ 2       │
│ model.jaffle_shop.orders     │ BUILD  │ 1       │
│ model.jaffle_shop.customers  │ REUSE  │ 1       │
└──────────────────────────────┴────────┴─────────┘

reasons
├── model.jaffle_shop.stg_orders BUILD
│   ├── code fingerprint changed: rendered SQL differs
│   └── config unchanged
├── model.jaffle_shop.orders BUILD
│   └── upstream model.jaffle_shop.stg_orders will be rebuilt
└── model.jaffle_shop.customers REUSE
    └── code and inputs unchanged since last successful run

info: 2 of 3 nodes will run; state is committed only if dbt succeeds
